try 3d slideshow effect

--- a/PC/index.html
+++ b/PC/index.html
@@ -18,5 +18,6 @@
         </ul>
         <ul id="nav"></ul>
         <div id="gallery_contain"></div>
+		<div id="debug"></div>
     </body>
 </html>
