--- a/PC/iscroll/examples/horizontal-scroll_demo/index.html
+++ b/PC/iscroll/examples/horizontal-scroll_demo/index.html
@@ -15,10 +15,29 @@
         var myScroll;
         function loaded() {
             myScroll = new iScroll('wrapper', {
+                hScrollbar:false,
+                onScrollMove:function () {
+                    console.log("scrollmove");
+                    var matrix = window.getComputedStyle(document.getElementById("scroller"), null).webkitTransform;
+                    var curPos = matrix.split(",")[4];
+
+                },
                 onScrollEnd:function () {
-                    console.log(1);
+                    var matrix = window.getComputedStyle(document.getElementById("scroller"), null).webkitTransform;
+                    var curPos = matrix.split(",")[4];
+                    if (Math.abs(curPos) % 340 !== 0) {
+                        var pos1 = Math.floor(Math.abs(curPos) / 340);
+                        var pos2 = Math.abs(curPos) % 340 / 340;
+                        var pos = (pos2 > 0.5 ? 1 : 0) + pos1;
+                        console.log("pos1:" + pos1);
+                        console.log("pos2:" + pos2);
+                        myScroll.scrollTo(pos * 340 * -1, 0, 1000);
+                    }
                 }
             });
+            myScroll.scrollTo(-340, 0, 0);
+
+//            document.getElementById("img1").style.webkitTransform="perspective(340px) rotateY(0deg) scale(1)";
         }
 
         document.addEventListener('touchmove', function (e) {
@@ -72,16 +91,17 @@
         #wrapper {
             position: absolute;
             z-index: 1;
-            top: 45px;
+            top: 30%;
             bottom: 0;
             left: 0;
-            width: 100%;
+            width: 1020px;
+            height: 400px;
             background: #aaa;
             overflow: auto;
         }
 
         #scroller {
-            width: 2040px;
+            width: 1700px;
             height: 100%;
             float: left;
             padding: 0;
@@ -103,12 +123,32 @@
             vertical-align: middle;
             float: left;
             padding: 0 10px;
-            width: 80px;
+            width: 320px;
             height: 100%;
-            border-left: 1px solid #ccc;
-            border-right: 1px solid #fff;
             background-color: #fafafa;
             font-size: 14px;
+        }
+
+        #scroller li a {
+            display: block;
+        }
+
+        img {
+            width: 300px;
+            border-radius: 5px 5px 0 0;
+            border: 1px solid #CCC;
+            padding: 10px 5px;
+            1 -webkit-box-reflect: below 1px -webkit-gradient(linear, 0 0, 0 100%, from(transparent), color-stop(.7, transparent), to(white));
+            -webkit-box-shadow: 0 5px 10px #333;
+            -webkit-transition: -webkit-transform 1s ease;
+        }
+
+        #img1 {
+            -webkit-transform: perspective(340px) rotateY(-30deg) scale(0.7);
+        }
+
+        #img3 {
+            -webkit-transform: perspective(340px) rotateY(30deg) scale(0.7);
         }
     </style>
 </head>
@@ -118,29 +158,20 @@
 <div id="wrapper">
     <div id="scroller">
         <ul id="thelist">
-            <li>Pretty col 1</li>
-            <li>Pretty col 2</li>
-            <li>Pretty col 3</li>
-            <li>Pretty col 4</li>
-            <li>Pretty col 5</li>
-            <li>Pretty col 6</li>
-            <li>Pretty col 7</li>
-            <li>Pretty col 8</li>
-            <li>Pretty col 9</li>
-            <li>Pretty col 10</li>
-            <li>Pretty col 11</li>
-            <li>Pretty col 12</li>
-            <li>Pretty col 13</li>
-            <li>Pretty col 14</li>
-            <li>Pretty col 15</li>
-            <li>Pretty col 16</li>
-            <li>Pretty col 17</li>
-            <li>Pretty col 18</li>
-            <li>Pretty col 19</li>
-            <li>Pretty col 20</li>
+            <li></li>
+            <li id="li_img1" style=""><a href="javascript:;"><img id="img1" src="images/uk4196.jpg"/></a></li>
+            <li><a href="javascript:;"><img id="img2" src="images/uk4197.jpg"/></a></li>
+            <li><a href="javascript:;"><img id="img3" src="images/uk4198.jpg"/></a></li>
+            <li></li>
         </ul>
     </div>
 </div>
+<script type="text/javascript">
+    document.getElementById("img1").addEventListener("touchmove", function (e) {
+        console.log("1");
+        e.preventDefault();
+    }, false);
+</script>
 
 </body>
 </html>
