--- a/PC/iscroll/examples/horizontal-scroll_demo/index.html
+++ b/PC/iscroll/examples/horizontal-scroll_demo/index.html
@@ -12,43 +12,68 @@
 
     <script type="text/javascript">
         var myScroll;
+        var curPosX;
+        var curPos = 0;
         function loaded() {
             myScroll = new iScroll('wrapper', {
                 hScrollbar:false,
+                onScrollStart:function () {
+                    var matrix = window.getComputedStyle(document.getElementById("scroller"), null).webkitTransform;
+                    curPos = Math.ceil(Math.abs(parseInt(matrix.split(",")[4])) / 340);
+                    curPosX = this.x;
+//                    console.log(startPos);
+                },
                 onScrollMove:function () {
+//                    console.log(this.x);
                     var matrix = window.getComputedStyle(document.getElementById("scroller"), null).webkitTransform;
                     var curPos = parseInt(matrix.split(",")[4]).toFixed(0);
+
                     var img1_matrix = document.getElementById("img1").style.webkitTransform;
+                    var img2_matrix = document.getElementById("img2").style.webkitTransform;
+                    var img3_matrix = document.getElementById("img3").style.webkitTransform;
+
                     var curPosOffset = curPos / 340;
                     var curRotateY = -1 * parseInt(-30 * curPosOffset).toFixed(0);
-
                     var curScale = curPosOffset > 0 ? 1 - (curPosOffset * 0.3) : 1 + (curPosOffset * 0.3);
                     document.getElementById("img1").style.webkitTransform = "perspective(340px) rotateY(" + curRotateY + "deg) scale(" + curScale + ")";
                     document.getElementById("img1").style.webkitTransition = "";
+
+                    var curImg2PosOffset = curPosOffset + 1;
+                    var curImg2RotateY = -1 * parseInt(-30 * curImg2PosOffset).toFixed(0);
+                    var curImg2Scale = curImg2PosOffset > 0 ? 1 - (curImg2PosOffset * 0.3) : 1 + (curImg2PosOffset * 0.3);
+                    document.getElementById("img2").style.webkitTransform = "perspective(340px) rotateY(" + curImg2RotateY + "deg) scale(" + curImg2Scale + ")";
+                    document.getElementById("img2").style.webkitTransition = "";
+//
+//                    document.getElementById("img3").style.webkitTransform = "perspective(340px) rotateY(" + curRotateY + "deg) scale(" + curScale + ")";
+//                    document.getElementById("img3").style.webkitTransition = "";
 //                    console.log(curScale);
                 },
                 onTouchEnd:function () {
-                    var matrix = window.getComputedStyle(document.getElementById("scroller"), null).webkitTransform;
-                    var curPos = matrix.split(",")[4];
-                    if (Math.abs(curPos) % 340 !== 0) {
-                        var pos1 = Math.floor(Math.abs(curPos) / 340);
-                        var pos2 = Math.abs(curPos) % 340 / 340;
-                        var pos = (pos2 > 0.5 ? 1 : 0) + pos1;
-//                        console.log("pos1:" + pos1);
-//                        console.log("pos2:" + pos2);
-                        var curPosOffset = curPos / 340;
-                        myScroll.scrollTo(pos * 340 * -1, 0, 1000);
-                        var imgRotateY = -1 * 30 * (pos);
-                        var curScale = 1;
-                        if (pos < 1) {
-                            curScale = 0.7 + (pos + 1) * 0.3;
-                        } else {
-                            curScale = 1 - (pos ) * 0.3;
-                        }
-                        document.getElementById("img1").style.webkitTransform = "perspective(340px) rotateY(" + imgRotateY + "deg) scale(" + curScale + ")";
-                        document.getElementById("img1").style.webkitTransition = "-webkit-transform 0.5s ease";
-                        console.log(pos);
+//                    console.log(this.x - startPosX);
+                    this.x - curPosX < 0 ? curPos++ : curPos--;
+                    curPos = curPos < 0 ? 0 : curPos > 2 ? 2 : curPos;
+                    this.scrollTo(curPos * 340 * -1, 0, 1000);
+
+                    var imgRotateY = -1 * 30 * (curPos);
+                    var curScale = 1;
+                    var curImg2Scale;
+                    if (curPos < 1) {
+                        curScale = 0.7 + (curPos + 1) * 0.3;
+                        curImg2Scale = 0.7 + (curPos ) * 0.3;
+                    } else {
+                        curScale = 1 - (curPos ) * 0.3;
+                        curImg2Scale = 1 - (curPos - 1 ) * 0.3;
                     }
+                    document.getElementById("img1").style.webkitTransform = "perspective(340px) rotateY(" + imgRotateY + "deg) scale(" + curScale + ")";
+                    document.getElementById("img1").style.webkitTransition = "-webkit-transform 0.5s ease";
+
+                    var img2RotateY = -1 * 30 * (curPos - 1);
+
+                    document.getElementById("img2").style.webkitTransform = "perspective(340px) rotateY(" + img2RotateY + "deg) scale(" + curImg2Scale + ")";
+                    document.getElementById("img2").style.webkitTransition = "-webkit-transform 0.5s ease";
+
+
+//                        console.log(pos);
                 },
                 onScrollEnd:function () {
 
@@ -158,7 +183,6 @@
             padding: 10px 5px;
             -webkit-box-reflect: below 1px -webkit-gradient(linear, 0 0, 0 100%, from(transparent), color-stop(.7, transparent), to(white));
             -webkit-box-shadow: 0 5px 10px #333;
-            1 -webkit-transition: -webkit-transform 1s ease;
         }
 
         #img1 {
