--- a/PC/ppt.html
+++ b/PC/ppt.html
@@ -10,6 +10,8 @@
 
     <link href="css/impress-demo.css" rel="stylesheet"/>
     <link href="css/mio.css" rel="stylesheet" type="text/css" />
+    <link href="css/circle.css" rel="stylesheet" type="text/css" />
+    <link href="css/3d.css" rel="stylesheet" type="text/css" />
 
 </head>
 
@@ -34,6 +36,8 @@
     </div>
 
     <div class="step slide" data-x="1000" data-y="-1500">
+        <q style="margin-top: 10px;">美丽的CSS 少女 Miro</q>
+
         <q style="margin-top: 0px;"><div id="main">
             <div id="ins">
                 <div id="bg"></div>
@@ -212,37 +216,61 @@
     </div>
 
     <div id="title" class="step" data-x="0" data-y="0" data-scale="3">
-        <span class="try">纯css打造</span>
-
-        <h1>这就是matrix2D的威力！</h1>
+        <h2 style="font-size: 100px;">这就是matrix2D的神威，化平淡为神奇！</h2>
     </div>
 
     <div id="its" class="step" data-x="850" data-y="3000" data-rotate="90" data-scale="5">
-        <p>matrix2D是一个<strong>强大的2D变形CSS的属性</strong> <br/>
-            它通过元素的2D平移（translate）、伸缩（scale）、旋转(rotate)、扭曲(skew)等基本变形方式来实现<br/>
-            它基于<strong>强大的现代游览器中</strong>（IE系靠边站吧...）.</p>
+        <p>matrix2D是<strong>强大的2D变形工具</strong> <br/>
+        Matrix2D的四大金刚
+        <ul>
+            <li>平移（translate）</li>
+            <li>伸缩（scale）</li>
+            <li>旋转(rotate)</li>
+            <li>扭曲(skew)</li>
+        </ul><br/>
+            它基于<strong>强大的现代浏览器</strong>（IE系靠边站吧...）.</p>
     </div>
 
     <div id="big" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="6">
-        <p>还有 <b>更大</b> <span class="thoughts">的突破？</span></p>
+        <p>还有 <b>更酷</b> <span class="thoughts">的吗？</span></p>
     </div>
 
-    <div id="tiny" class="step" data-x="2825" data-y="2325" data-z="-3000" data-rotate="300" data-scale="1">
-        <p>让 <b>我们看</b> 以下demo...</p>
+    <div id="tiny" style="background-color: black" class="step" data-x="2825" data-y="2325" data-z="-3000" data-rotate="300" data-scale="1">
+        <div id="container">
+            <div id="frame">
+                <div class="inner">
+                    <div class="a"></div>
+                    <div class="b"></div>
+                    <div class="c"></div>
+                    <div class="d"></div>
+                    <div class="e"></div>
+                    <div class="f"></div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <div id="ing" class="step" data-x="3500" data-y="-850" data-rotate="270" data-scale="6">
-        <p>by <b class="positioning">positioning</b>, <b class="rotating">rotating</b> and <b
-            class="scaling">scaling</b> them on an infinite canvas</p>
+        <div id="stage">
+            <div id="rotate">
+                <div id="ring-1" class="ring"></div>
+                <div id="ring-2" class="ring"></div>
+                <div id="ring-3" class="ring"></div>
+            </div>
+        </div>
+        <script type="text/javascript" src="js/circle.js"></script>
+        <!--<p>by <b class="positioning">positioning</b>, <b class="rotating">rotating</b> and <b-->
+            <!--class="scaling">scaling</b> them on an infinite canvas</p>-->
     </div>
 
     <div id="imagination" class="step" data-x="6700" data-y="-300" data-scale="6">
-        <p>the only <b>limit</b> is your <b class="imagination">imagination</b></p>
+        <p>Matrix3D提供了强大的3D空间变换</p>
     </div>
 
     <div id="source" class="step" data-x="6300" data-y="2000" data-rotate="20" data-scale="4">
-        <p>want to know more?</p>
-        <q><a href="http://github.com/bartaz/impress.js">use the source</a>, Luke!</q>
+        <p>想要了解更多?</p>
+        <q><a href="http://dev.w3.org/csswg/css3-3d-transforms/">W3C CSS 3D Transforms</a></q>
     </div>
 
     <div id="one-more-thing" class="step" data-x="6000" data-y="4000" data-scale="2">
