--- a/PC/ppt.html
+++ b/PC/ppt.html
@@ -274,14 +274,13 @@
     </div>
 
     <div id="one-more-thing" class="step" data-x="6000" data-y="4000" data-scale="2">
-        <p>one more thing...</p>
+        <p>还有一件事情...</p>
     </div>
 
     <div id="its-in-3d" class="step" data-x="6200" data-y="4300" data-z="-100" data-rotate-x="-40" data-rotate-y="10"
          data-scale="2">
-        <p><span class="have">have</span> <span class="you">you</span> <span class="noticed">noticed</span> <span
-            class="its">it's</span> <span class="in">in</span> <b>3D<sup>*</sup></b>?</p>
-        <span class="footnote">* beat that, prezi ;)</span>
+        <p><span class="have">谢谢</span> <span class="you">观赏</span> <span class="noticed">基于</span> <span
+            class="its">impress.js</span> <span class="in">模板</span> <b>的HTML5<sup>PPT</sup></b></p>
     </div>
 
     <div id="overview" class="step" data-x="3000" data-y="1500" data-scale="10">
