--- a/PC/ppt.html
+++ b/PC/ppt.html
@@ -4,14 +4,12 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=1024"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <title>CSS matrix 3D - HTML 5 之美</title>
-
-
+    <title>CSS 变形之美 - HTML 5 之美</title>
 
     <link href="css/impress-demo.css" rel="stylesheet"/>
-    <link href="css/mio.css" rel="stylesheet" type="text/css" />
-    <link href="css/circle.css" rel="stylesheet" type="text/css" />
-    <link href="css/3d.css" rel="stylesheet" type="text/css" />
+    <link href="css/mio.css" rel="stylesheet" type="text/css"/>
+    <link href="css/circle.css" rel="stylesheet" type="text/css"/>
+    <link href="css/3d.css" rel="stylesheet" type="text/css"/>
 
 </head>
 
@@ -26,24 +24,32 @@
 
 <div id="impress">
 
-    <div id="bored" class="step slide" data-x="-1000" data-y="-1500">
-        <q>你是否已经对平淡无奇的网页感到厌倦？</q>
-        <q style="border: 1px solid #000; width:250px; height: 250px;">一个方方正正的世界</q>
-    </div>
+<div id="start" class="step slide" data-x="-2000" data-y="-1500">
+    <q style="text-align: center; margin-top: 180px;">CSS变形之美</q>
+    <q style="width:250px; height: 250px; float: right; text-align: right">
+        轩与<br/>
+        2012.4
+    </q>
+</div>
 
-    <div class="step slide" data-x="0" data-y="-1500">
-        <q>让我们来点惊艳的...</q>
-    </div>
+<div id="bored" class="step slide" data-x="-1000" data-y="-1500">
+    <q>你是否已经对平淡无奇的网页感到厌倦？</q>
+    <q style="border: 1px solid #000; width:250px; height: 250px;">一个方方正正的世界</q>
+</div>
 
-    <div class="step slide" data-x="1000" data-y="-1500">
-        <q style="margin-top: 10px;">美丽的CSS 少女 Miro</q>
+<div class="step slide" data-x="0" data-y="-1500">
+    <q>让我们介绍CSS的新成员</q>
+</div>
 
-        <q style="margin-top: 0px;"><div id="main">
+<div class="step slide" data-x="1000" data-y="-1500">
+    <q style="margin-top: 10px;">美丽的CSS少女 Miro</q>
+
+    <q style="margin-top: 0px;">
+        <div id="main">
             <div id="ins">
                 <div id="bg"></div>
                 <div class="draw">
                     <div id="head"></div>
-
                     <div id="hear_back">
                         <div class="hb1 black"></div>
                         <div class="hb2 black"></div>
@@ -64,7 +70,6 @@
                         <div class="hb17 black"></div>
                         <div class="hb18"></div>
                     </div>
-
                     <div id="clothes">
                         <div class="cls1"></div>
                         <div class="cls2"></div>
@@ -78,7 +83,6 @@
                         <div class="cls8"></div>
                         <div class="cls9"></div>
                     </div>
-
                     <div id="ear">
                         <div class="ear1"></div>
                         <div class="ear2"></div>
@@ -89,9 +93,7 @@
                         <div class="ear7"></div>
                         <div class="ear8"></div>
                     </div>
-
                     <div id="neck"></div>
-
                     <div id="face">
                         <div class="fac1"></div>
                         <div class="fac2"></div>
@@ -114,7 +116,6 @@
                         <div class="fac15 line"></div>
                         <div class="fac16 line"></div>
                     </div>
-
                     <div id="eye">
                         <div class="eye1 line"></div>
                         <div class="eye2 line"></div>
@@ -148,7 +149,6 @@
                         <div class="eye30 line"></div>
                         <div class="eye31 line"></div>
                     </div>
-
                     <div id="hair_front">
                         <div class="hf1"></div>
                         <div class="hf2"></div>
@@ -165,7 +165,9 @@
                         <div class="hf13"></div>
                         <div class="hf14"></div>
                         <div class="hf15"></div>
-                        <div class="hf16"><div></div></div>
+                        <div class="hf16">
+                            <div></div>
+                        </div>
                         <div class="hf17"></div>
                         <div class="hf18"></div>
                         <div class="hf19"></div>
@@ -184,7 +186,6 @@
                         <div class="hf32"></div>
                         <div class="hf33"></div>
                     </div>
-
                     <div id="light">
                         <div class="light1"></div>
                         <div class="light2"></div>
@@ -198,7 +199,6 @@
                         <div class="light10"></div>
                         <div class="light11"></div>
                     </div>
-
                     <div id="dark">
                         <div class="dark1"></div>
                         <div class="dark2"></div>
@@ -212,85 +212,86 @@
                     </div>
                 </div>
             </div>
-        </div></q>
-    </div>
+        </div>
+    </q>
+</div>
 
-    <div id="title" class="step" data-x="0" data-y="0" data-scale="3">
-        <h2 style="font-size: 100px;">这就是matrix2D的神威，化平淡为神奇！</h2>
-    </div>
+<div id="title" class="step" data-x="0" data-y="0" data-scale="3">
+    <h2 style="font-size: 100px;">这就是css变形的神威，化平淡为神奇！</h2>
+</div>
 
-    <div id="its" class="step" data-x="850" data-y="3000" data-rotate="90" data-scale="5">
-        <p>matrix2D是<strong>强大的2D变形工具</strong> <br/>
-        Matrix2D的四大金刚
-        <ul>
-            <li>平移（translate）</li>
-            <li>伸缩（scale）</li>
-            <li>旋转(rotate)</li>
-            <li>扭曲(skew)</li>
-        </ul><br/>
-            它基于<strong>强大的现代浏览器</strong>（IE系靠边站吧...）.</p>
-    </div>
+<div id="its" class="step" data-x="850" data-y="3000" data-rotate="90" data-scale="5">
+    <p>matrix2D是<strong>强大的2D CSS变形助手</strong> <br/>
+        Matrix2D的四大属性
+    <ul>
+        <li>平移(translate)</li>
+        <li>伸缩(scale)</li>
+        <li>旋转(rotate)</li>
+        <li>扭曲(skew)</li>
+    </ul>
+    <br/>
+    它基于<strong>强大的现代浏览器</strong>并且已经实现</p>
+</div>
 
-    <div id="big" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="6">
-        <p>还有 <b>更酷</b> <span class="thoughts">的吗？</span></p>
-    </div>
+<div id="big" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="2">
+    <p>还有 <b>更酷</b> <span class="thoughts">的吗？</span></p>
+</div>
 
-    <div id="tiny" style="background-color: black" class="step" data-x="2825" data-y="2325" data-z="-3000" data-rotate="300" data-scale="1">
-        <div id="container">
-            <div id="frame">
-                <div class="inner">
-                    <div class="a"></div>
-                    <div class="b"></div>
-                    <div class="c"></div>
-                    <div class="d"></div>
-                    <div class="e"></div>
-                    <div class="f"></div>
-                </div>
+<div id="tiny" style="background-color: black" class="step" data-x="8000" data-y="7000" data-z="-3000" data-rotate="300"
+     data-scale="1">
+    <div id="container">
+        <div id="frame">
+            <div class="inner">
+                <div class="a"></div>
+                <div class="b"></div>
+                <div class="c"></div>
+                <div class="d"></div>
+                <div class="e"></div>
+                <div class="f"></div>
             </div>
         </div>
-
-    </div>
-
-    <div id="ing" class="step" data-x="3500" data-y="-850" data-rotate="270" data-scale="6">
-        <div id="stage">
-            <div id="rotate">
-                <div id="ring-1" class="ring"></div>
-                <div id="ring-2" class="ring"></div>
-                <div id="ring-3" class="ring"></div>
-            </div>
-        </div>
-        <script type="text/javascript" src="js/circle.js"></script>
-        <!--<p>by <b class="positioning">positioning</b>, <b class="rotating">rotating</b> and <b-->
-            <!--class="scaling">scaling</b> them on an infinite canvas</p>-->
-    </div>
-
-    <div id="imagination" class="step" data-x="6700" data-y="-300" data-scale="6">
-        <p>Matrix3D提供了强大的3D空间变换</p>
-    </div>
-
-    <div id="source" class="step" data-x="6300" data-y="2000" data-rotate="20" data-scale="4">
-        <p>想要了解更多?</p>
-        <q><a href="http://dev.w3.org/csswg/css3-3d-transforms/">W3C CSS 3D Transforms</a></q>
-    </div>
-
-    <div id="one-more-thing" class="step" data-x="6000" data-y="4000" data-scale="2">
-        <p>还有一件事情...</p>
-    </div>
-
-    <div id="its-in-3d" class="step" data-x="6200" data-y="4300" data-z="-100" data-rotate-x="-40" data-rotate-y="10"
-         data-scale="2">
-        <p><span class="have">谢谢</span> <span class="you">观赏</span> <span class="noticed">基于</span> <span
-            class="its">impress.js</span> <span class="in">模板</span> <b>的HTML5<sup>PPT</sup></b></p>
-    </div>
-
-    <div id="overview" class="step" data-x="3000" data-y="1500" data-scale="10">
     </div>
 
 </div>
 
-<div class="hint">
-    <p>Use a spacebar or arrow keys to navigate</p>
+<div id="ing" class="step" data-x="3500" data-y="-850" data-rotate="270" data-scale="6">
+    <div id="stage">
+        <div id="rotate">
+            <div id="ring-1" class="ring"></div>
+            <div id="ring-2" class="ring"></div>
+            <div id="ring-3" class="ring"></div>
+        </div>
+    </div>
+    <script type="text/javascript" src="js/circle.js"></script>
+    <!--<p>by <b class="positioning">positioning</b>, <b class="rotating">rotating</b> and <b-->
+    <!--class="scaling">scaling</b> them on an infinite canvas</p>-->
 </div>
+
+<div id="imagination" class="step" data-x="6700" data-y="-300" data-scale="6">
+    <p>Matrix3D提供了强大的3D空间变换</p>
+</div>
+
+<div id="source" class="step" data-x="6300" data-y="2000" data-rotate="20" data-scale="4">
+    <p>想要了解更多?</p>
+    <q><a href="http://dev.w3.org/csswg/css3-3d-transforms/">W3C CSS 3D Transforms</a></q>
+</div>
+
+<div id="one-more-thing" class="step" data-x="6000" data-y="4000" data-scale="2">
+    <p>还有一件事情...</p>
+</div>
+
+<div id="its-in-3d" class="step" data-x="6200" data-y="4300" data-z="-100" data-rotate-x="-40" data-rotate-y="10"
+     data-scale="2">
+    <p><span class="have">谢谢</span> <span class="you">观赏</span> <span class="noticed">基于</span> <span
+        class="its">impress.js</span> <span class="in">模板</span> <b>的HTML5<sup>PPT</sup></b></p>
+</div>
+
+<div id="overview" class="step" data-x="3000" data-y="1500" data-scale="10">
+</div>
+
+</div>
+
+
 <script>
     if ("ontouchstart" in document.documentElement) {
         document.querySelector(".hint").innerHTML = "<p>Tap on the left or right to navigate</p>";
