--- a/PC/ppt.html
+++ b/PC/ppt.html
@@ -25,7 +25,7 @@
 <div id="impress">
 
 <div id="start" class="step slide" data-x="-2000" data-y="-1500">
-    <q style="text-align: center; margin-top: 180px;">CSS变形之美</q>
+    <q style="text-align: center; margin-top: 180px;">CSS3 Matrix2D&3D</q>
     <q style="width:250px; height: 250px; float: right; text-align: right">
         轩与<br/>
         2012.4
@@ -33,7 +33,7 @@
 </div>
 
 <div id="bored" class="step slide" data-x="-1000" data-y="-1500">
-    <q>你是否已经对平淡无奇的网页感到厌倦？</q>
+    <q>C</q>
     <q style="border: 1px solid #000; width:250px; height: 250px;">一个方方正正的世界</q>
 </div>
 
@@ -292,7 +292,7 @@
 </div>
 
 
-<script>
+<script type="text/javascript">
     if ("ontouchstart" in document.documentElement) {
         document.querySelector(".hint").innerHTML = "<p>Tap on the left or right to navigate</p>";
     }
