--- a/PC/test.html
+++ b/PC/test.html
@@ -9,18 +9,17 @@
             height: 300px;
             background: #CCC;
             margin: 200px;
-            -webkit-transform:matrix(1,0.5,0,1,0,0);
         }
     </style>
 </head>
 
 <body>
-<div id="matrixbox"></div>
+<div id="matrixbox" style="-webkit-transform:scale(0.866) skew(30deg,30deg);-webkit-transform-origin:0 0"></div>
 <script type="text/javascript" src="js/jquery-1.6.4.min.js"></script>
 <script type="text/javascript">
-    $("#matrixbox").css({
-        "-webkit-transform":"matrix(1,"+Math.sin(30)+",1,0,0)"
-    });
+//    $("#matrixbox").css({
+//        "-webkit-transform":"matrix(1,"+Math.sin(30)+",1,0,0)"
+//    });
 </script>
 </body>
 </html>
