--- a/PC/ppt.html
+++ b/PC/ppt.html
@@ -24,7 +24,7 @@
 
 <div id="impress">
 
-<div id="start" class="step slide" data-x="-2000" data-y="-1500">
+<div id="start" class="step slide" data-x="-1000" data-y="-1500">
     <q style="text-align: center; margin-top: 180px;">CSS3 Transform<br/>Matrix2D&3D</q>
     <q style="width:250px; height: 250px; float: right; text-align: right">
         轩与<br/>
@@ -32,8 +32,9 @@
     </q>
 </div>
 
-<div id="bored" class="step slide" data-x="-1000" data-y="-1500">
-    <q style="margin-left: 100px;">CSS3<br /> Transform</q>
+<div id="bored" class="step slide" data-x="0" data-y="-1500" data-scale="0.6">
+    <q style="margin-left: 100px;">CSS3<br/>Transform</q>
+
     <div id="sphere" class="contact">
         <div class="rotator">
             <div class="container"></div>
@@ -44,13 +45,8 @@
     <script type="text/javascript" src="js/experiment.js"></script>
 </div>
 
-<div class="step slide" data-x="0" data-y="-1500">
-    <q>先让我们看几个使用<b>Transform 2D和3D</b>特性的demo</q>
-
-</div>
-
 <div class="step slide" data-x="1000" data-y="-1500">
-    <q style="margin-top: 10px;">美丽的CSS少女 K-ON! 秋山澪</q>
+    <q style="margin-top: 10px;">CSS少女 K-ON! 秋山澪</q>
     <q style="margin-top: 0px;">
         <div id="main">
             <div id="ins">
@@ -223,7 +219,8 @@
     </q>
 </div>
 
-<div id="title" style="background-color: black;width:1500px;height: 1000px; z-index: 0" class="step" data-x="0" data-y="0" data-scale="1">
+<div id="title" style="background-color: black;width:1500px;height: 1000px; z-index: 0" class="step" data-x="0"
+     data-y="0" data-scale="0.8">
     <div id="container">
         <div id="frame">
             <div class="inner">
@@ -238,31 +235,46 @@
     </div>
 </div>
 
-<div id="its" class="step" data-x="850" data-y="3000" data-rotate="90" data-scale="5">
+<div id="its" class="step" data-x="850" data-y="3000" data-rotate="90" data-scale="3">
     <p>
-        Transform2D的四种变形方式
+        Transform2D的四种基本变形方式
     <ul>
         <li>平移(translate)</li>
         <li>伸缩(scale)</li>
+        <li>歪斜(skew)</li>
         <li>旋转(rotate)</li>
-        <li>扭曲(skew)</li>
     </ul>
 </div>
 
 <div id="big" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="2">
-    <p><b>Matrix</b>基本变形方式</p>
-    <img src="images/m_column_elements.gif">
+    <p><b>Matrix</b></p>
+    <q style="text-align: left; font-size: 40px;">变形矩阵:matrix(a,b,c,d,e,f)<img src="images/matrix.gif"></q>
 </div>
 
-<div id="tiny" class="step" data-x="8000" data-y="7000" data-z="-3000" data-rotate="300"
-     data-scale="1">
-    <q>四种变形方式与Matrix之间的关系</q>
-    <img src="images/m_element_meanings.gif" />
+<div id="tiny" class="step" data-x="8000" data-y="7000" data-z="-3000" data-rotate="300" data-scale="1">
+    <q>四种基本变形方式与Matrix之间的关系</q>
 
+    <div>
+        <img src="images/m_element_meanings.gif"/><br/>
+        translate(x, y) = matrix(1, 0, 0, 1, x, y)<br/>
+        scale(x, y) = matrix(x, 0, 0, y, 0, 0)<br/>
+        skewx(a) = matrix(1, 0, tan(a), 1, 0, 0)<br/>
+        skewy(a) = matrix(1, tan(a), 0, 1, 0, 0)<br/>
+    </div>
+</div>
+
+<div id="rotatequestion" class="step" data-x="8000" data-y="5000" data-rotate="180" data-scale="1">
+    <q>Rotate去哪里了？</q>
+</div>
+
+<div id="ralationmatrix" class="step" data-x="9000" data-y="5000" data-rotate="0" data-scale="1">
+    <q>rotate=scale+skew</q>
+    rotate(a) = matrix(cos(a), sin(a), -sin(a), cos(a), 0, 0)<br/>
 </div>
 
 <div id="ing" class="step" data-x="3500" data-y="-850" data-rotate="270" data-scale="3">
     <h1 style="font-size: 30px;">灵活控制变形的王道</h1>
+
     <h3 style="font-size: 100px;">矩阵乘法</h3>
     <!--<script type="text/javascript" src="js/circle.js"></script>-->
     <!--<p>by <b class="positioning">positioning</b>, <b class="rotating">rotating</b> and <b-->
@@ -291,7 +303,7 @@
 <div id="its-in-3d" class="step" data-x="6200" data-y="4300" data-z="-100" data-rotate-x="-40" data-rotate-y="10"
      data-scale="2">
     <p><span class="have">谢谢</span> <span class="you">观赏</span> <span class="noticed">基于</span> <span
-            class="its">impress.js</span> <span class="in">模板</span><b>的HTML5<sup>PPT</sup></b></p>
+        class="its">impress.js</span> <span class="in">模板</span><b>的HTML5<sup>PPT</sup></b></p>
 </div>
 
 <div id="question" class="step" data-x="6500" data-y="4800" data-rotate="180">
